--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -4,6 +4,14 @@
         {% set contact = form.datasetContacts | first %}
         <tr>
             <td>
+				<span class="helpSection">
+					{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+					<img class="info" src="{{ asset_url }}">
+					{% endimage %}
+					<div class="tooltiptext">
+						The name of the individual responsible for the creation of the majority of the dataset.
+					</div>
+				</span>
                 <label for="contactperson">Name</label>
                 <select class="contactperson" id="contactperson" name="datasetContacts[0][person]" required="required">
                     {% if contact.vars.data.person|default %}
@@ -25,40 +33,42 @@
                 {{ form_row(contact.person.url, {'attr': {'disabled': 'true'} , 'required': false}) }}
                 {{ form_row(contact.person.organization, {'attr': {'disabled': 'true'} , 'required': false}) }}
                 {{ form_row(contact.person.position, {'attr': {'disabled': 'true'} , 'required': false}) }}
-            </td>
-            <td>
-                <span class="field-help">
-                    The name of the individual responsible for the creation of the majority of the dataset.
-                </span>
-            </td>
+			</td>
         </tr>
         <tr>
             <td>
+				<span class="helpSection">
+					{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+					<img class="info" src="{{ asset_url }}">
+					{% endimage %}
+					<div class="tooltiptext">
+						Resource Provider: Party that supplies the resource.<br>
+						Custodian: Party that accepts accountability and responsibility for the data and ensures appropriate care and maintenance of the resource.<br>
+						Owner: Party that owns the resource.<br>
+						Distributor: Party who distributes the resource.<br>
+						Originator: Party who created the resource.<br>
+						Point of Contact: Party who can be contacted for acquiring knowledge about or acquisition of the resource.<br>
+						Principal Investigator: Key party responsible for gathering information and conducting research.<br>
+						Processor: Party who has processed the data in a manner such that the resource has been modified.<br>
+						Publisher: Party who published the resource.<br>
+						Author: Party who authored the resource.<br>
+					</div>
+				</span>
                 {{ form_row(contact.role) }}
-            <td>
-                <span class="field-help">
-                    Resource Provider: Party that supplies the resource.<br>
-                    Custodian: Party that accepts accountability and responsibility for the data and ensures appropriate care and maintenance of the resource.<br>
-                    Owner: Party that owns the resource.<br>
-                    Distributor: Party who distributes the resource.<br>
-                    Originator: Party who created the resource.<br>
-                    Point of Contact: Party who can be contacted for acquiring knowledge about or acquisition of the resource.<br>
-                    Principal Investigator: Key party responsible for gathering information and conducting research.<br>
-                    Processor: Party who has processed the data in a manner such that the resource has been modified.<br>
-                    Publisher: Party who published the resource.<br>
-                    Author: Party who authored the resource.<br>
-                </span>
             </td>
         </tr>
 
         <tr>
             <td>
+				<span class="helpSection">
+					{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+					<img class="info" src="{{ asset_url }}">
+					{% endimage %}
+					<div class="tooltiptext">
+						The Suggested Author List should contain all participants who collaborated in the creation, processing or analysis of the data you are sending to GRIIDC who should be acknowledged if these data are cited as a published work. Please list suggested authors in the order in which they should be listed in a citation.
+					</div>
+				</span>
                 {{ form_row(form.authors) }}
-            </td>
-            <td>
-                <span class="field-help">
-                   The Suggested Author List should contain all participants who collaborated in the creation, processing or analysis of the data you are sending to GRIIDC who should be acknowledged if these data are cited as a published work. Please list suggested authors in the order in which they should be listed in a citation.
-                </span>
             </td>
         </tr>
     </table>
