--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
@@ -6,7 +6,7 @@
     <div id="geoWizard" style="width:100%;height:100%;"/>
         <table class="tab-table">
             <tr>
-                <td valign="top">
+                <td valign="top" width="60%"">
                     <div id="nonspatial">
                         {{ form_row(form.spatialExtentDescription) }}
                     </div>
