Added missing protocol for digital transfer.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -92,6 +92,9 @@ Unit 5869]]>
                             <gmd:linkage>
                                 <gmd:URL>https://data.gulfresearchinitiative.org/data/{{dataset.udi}}</gmd:URL>
                             </gmd:linkage>
+                            <gmd:protocol>
+                                <gco:CharacterString>https</gco:CharacterString>
+                            </gmd:protocol>
                         </gmd:CI_OnlineResource>
                     </gmd:onLine>
                 </gmd:MD_DigitalTransferOptions>
