Fixed contact name to refect correct instance of person.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/metadata-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/metadata-contact.html.twig
@@ -13,7 +13,7 @@
 					</div>
 				</span>
                 <label for="metadatacontact">Name</label>
-                <select class="contactperson" id="metadatacontact" name="metadataContacts[0][person]" required="required">
+                <select class="contactperson" id="metadatacontact" name="{{contact.person.vars.full_name}}" required="required">
                     {% if contact.vars.data.person|default %}
                     <option selected value="{{contact.vars.data.person.id}}">
                         {{contact.vars.data.person.lastName}}, {{contact.vars.data.person.firstName}}, {{contact.vars.data.person.emailAddress}}
