--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -43,6 +43,9 @@
 {% endblock %}
 
 {% block body %}
+{% if error %}
+    <div class="messages error"> {{ error }}</div>
+{% endif %}
 <script type="text/javascript">var issueTrackingBaseUrl="{{ issueTrackingBaseUrl }}";</script>
 <div style="background: #fff2e8; padding:0px;" id="tabs">
   <div class="ui-tabs">
