made email a mailto link in template

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DoiRequest/doiForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DoiRequest/doiForm.html.twig
@@ -1,6 +1,6 @@
 {% if alreadyExists %}
 <div class="messages error">
-    The dataset already has a DOI assigned. For more information please email griidc@gomri.org.
+    The dataset already has a DOI assigned. For more information please email <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.
 </div>
 {% endif %}
 
