--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
@@ -11,9 +11,9 @@
 
 {{ form_start(form, {'attr': {'id': 'regForm'}}) }}
     <div id="metatoolbar" class="ui-widget-header ui-corner-all toolbarbutton">
-        <button type="button" id="btn-upload">Import XML Metadata From File</button>
+        <button type="button" id="btn-upload" title="This button will allow you to populate tabs with information from a Valid ISO 19115-2 file in xml format from your computer.">Import XML Metadata From File</button>
         <button type="button" id="btn-from-url">Import XML Metadata from URL</button>
-        <button type="button" id="btn-save">Save and Continue later</button>
+        <button type="button" id="btn-save" title="This button saves the information you have entered into the form but does not submit the information to GRIIDC.">Save and Continue later</button>
     </div>
 
     <fieldset>
