--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/metadata-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/metadata-contact.html.twig
@@ -12,7 +12,6 @@
 						The name of the individual responsible for maintaining the metadata, typically the scientists or researcher who created the dataset.
 					</div>
 				</span>
-                <label for="metadatacontact">Name</label>
                 <select class="contactperson" id="metadatacontact" name="{{contact.person.vars.full_name}}" required="required">
                     {% if contact.vars.data.person|default %}
                     <option selected value="{{contact.vars.data.person.id}}">
@@ -21,18 +20,22 @@
                     {% endif %}
                 </select>
                 <label for="metadatacontact" class="error"></label>
-                {{ form_row(contact.person.firstName, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.lastName, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.emailAddress, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.phoneNumber, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.deliveryPoint, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.city, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.administrativeArea, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.postalCode, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.country, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.url, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.organization, {'attr': {'disabled': 'true'} , 'required': false}) }}
-                {{ form_row(contact.person.position, {'attr': {'disabled': 'true'} , 'required': false}) }}
+                <div id="datasetcontactinformation">
+                    <span field="position">{{ contact.vars.data.person.position }}</span><br />
+                    <span field="organization"> {{ contact.vars.data.person.organization }}</span><br />
+                    <span field="deliveryPoint"> {{ contact.vars.data.person.deliveryPoint }}</span><br />
+                    {% if contact.vars.data.person.city is not null %}
+                        <span field="city">{{ contact.vars.data.person.city }},</span>
+                    {% else %}
+                        <span field="city">{{ contact.vars.data.person.city }}</span>
+                    {% endif %}
+                    <span field="administrativeArea"> {{ contact.vars.data.person.administrativeArea }}</span>
+                    <span field="postalCode"> {{ contact.vars.data.person.postalCode }}</span><br />
+                    <span field="country"> {{ contact.vars.data.person.country }}</span><br />
+                    <span field="phoneNumber"> {{ contact.vars.data.person.phoneNumber }}</span><br />
+                    <span field="url">{{ contact.vars.data.person.url }}</span> <br />
+                </div>
+
             </td>
         </tr>
         <tr>
