--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -12,6 +12,7 @@
 						The name of the individual responsible for the creation of the majority of the dataset.
 					</div>
 				</span>
+                <label for="datasetcontact">Person</label>
                 <select class="contactperson" id="contactperson" name="{{contact.person.vars.full_name}}" required="required">
                     {% if contact.vars.data.person|default %}
                     <option selected value="{{contact.vars.data.person.id}}">
@@ -20,21 +21,7 @@
                     {% endif %}
                 </select>
                 <label for="contactperson" class="error"></label>
-                <div id="datasetcontactinformation">
-                    <span field="position">{{ contact.vars.data.person.position }}</span><br />
-                    <span field="organization">{{ contact.vars.data.person.organization }}</span><br />
-                    <span field="deliveryPoint">{{ contact.vars.data.person.deliveryPoint }}</span><br />
-                    {%if contact.vars.data.person.city is not null %}
-                        <span field="city">{{ contact.vars.data.person.city }},</span>
-                    {% else %}
-                        <span field="city"></span>
-                    {% endif %}
-                    <span field="administrativeArea"> {{ contact.vars.data.person.administrativeArea }}</span>
-                    <span field="postalCode"> {{ contact.vars.data.person.postalCode }}</span><br />
-                    <span field="country"> {{ contact.vars.data.person.country }}</span><br />
-                    <span field="phoneNumber"> {{ contact.vars.data.person.phoneNumber }}</span><br />
-                    <span field="url">{{ contact.vars.data.person.url }}</span> <br />
-                </div>
+                {% include "PelagosAppBundle:DatasetSubmission:contact-information.html.twig" %}
 			</td>
         </tr>
         <tr>
