Removed additional references to author-approval state.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -135,7 +135,7 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						If data is available to the general public, select "None". Select "Restricted" if data cannot be shared to anyone. Select "Requires Author's Approval" if you can share the data but prefer to control the sharing of the dataset. In the later case, GRIIDC will maintain a list of users associated to a dataset.
+						If data is available to the general public, select "None". Select "Restricted" if data cannot be shared.
 					</div>
 				</span>
                     {{ form_widget(form.restrictions) }}
