--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -43,12 +43,9 @@
 {% endblock %}
 
 {% block body %}
-{% if error %}
-    <div class="messages error">{{ error }}</div>
-{% endif %}
 
 {% if message|default %}
-    <div class="message info">{{ message|default }}</div>
+    <div class="messages status">{{ message|default }}</div>
 {% endif %}
 
 <script type="text/javascript">var issueTrackingBaseUrl="{{ issueTrackingBaseUrl }}";</script>
